
    HADOOP-8353. hadoop-daemon.sh and yarn-daemon.sh can be misleading on stop.
    (Roman Shaposhnik via atm)

    HADOOP-8113. Correction to BUILDING.txt: HDFS needs ProtocolBuffer, too
    (not just MapReduce). Contributed by Eugene Koontz.

    HADOOP-8285 Use ProtoBuf for RpcPayLoadHeader (sanjay radia)

    HADOOP-8366 Use ProtoBuf for RpcResponseHeader (sanjay radia)

  OPTIMIZATIONS

    HADOOP-8422. Deprecate FileSystem#getDefault* and getServerDefault
    methods that don't take a Path argument. (eli)

    HADOOP-7818. DiskChecker#checkDir should fail if the directory is
    not executable. (Madhukara Phatak via harsh)

    HADOOP-8531. SequenceFile Writer can throw out a better error if a
    serializer or deserializer isn't available
    (Madhukara Phatak via harsh)

    HADOOP-8609. IPC server logs a useless message when shutting down socket.
    (Jon Zuanich via atm)

  BUG FIXES

    HADOOP-8199. Fix issues in start-all.sh and stop-all.sh (Devaraj K via umamahesh)

    HADOOP-7900. LocalDirAllocator confChanged() accesses conf.get() twice
    (Ravi Gummadi via Uma Maheswara Rao G)

    HADOOP-7635. RetryInvocationHandler should release underlying resources on
    close. (atm)

    HADOOP-7695. RPC.stopProxy can throw unintended exception while logging
    error. (atm)

    HADOOP-7833. Fix findbugs warnings in protobuf generated code.
    (John Lee via suresh)

    HADOOP-7897. ProtobufRpcEngine client side exception mechanism is not
    consistent with WritableRpcEngine. (suresh)

    HADOOP-7913. Fix bug in ProtoBufRpcEngine.  (sanjay)

    HADOOP-7892. IPC logs too verbose after "RpcKind" introduction. (todd)

    HADOOP-7968. Errant println left in RPC.getHighestSupportedProtocol. (Sho
    Shimauchi via harsh)

    HADOOP-7931. o.a.h.ipc.WritableRpcEngine should have a way to force
    initialization. (atm)

    HADOOP-8104. Inconsistent Jackson versions (tucu)

    HADOOP-8119. Fix javac warnings in TestAuthenticationFilter in hadoop-auth.